<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ColorSwitch</string>
    <string name="action_settings">Settings</string>
    <string name="red">RED</string>
    <string name="blue">BLUE</string>
    <string name="green">GREEN</string>
    <string name="black">BLACK</string>
    <string name="title_activity_color">ColorActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="touch">Touch to Continue</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="header">Form</string>
    <string name="formButton">Form</string>
    <string name="button">Submit</string>
    <string name="name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="email">Email</string>

</resources>
