<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ColorActivity" >

<TableLayout 
        android:id="@+id/tablelayout1"
        android:layout_height="wrap_content" 
        android:layout_width="wrap_content" 
        android:layout_centerInParent="true"> 
        
         
       <TableRow >
        <Button 
            android:layout_height="wrap_content" 
            android:layout_width="wrap_content" 
            android:text="@string/red" 
            android:onClick="red" 
            android:id="@+id/red"/> 
            
        <Button 
            android:layout_height="wrap_content" 
            android:layout_width="fill_parent" 
            android:text="@string/green" 
            android:onClick="green" 
            android:id="@+id/green"/> 
     
     </TableRow>
     
       <TableRow >
         <Button 
             android:layout_height="wrap_content" 
             android:layout_width="wrap_content" 
             android:text="@string/blue" 
             android:onClick="blue" 
             android:id="@+id/blue"/> 
          
         <Button 
             android:layout_height="wrap_content" 
             android:layout_width="wrap_content" 
             android:text="@string/black" 
             android:onClick="black" 
             android:id="@+id/black"/> 
             
         </TableRow>
         
     </TableLayout>

<Button
    android:id="@+id/button1"
    style="?android:attr/buttonStyleSmall"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="60dp"
    android:text="@string/formButton"
    android:onClick="formActivity" />

</RelativeLayout>
